tests/baselines/reference/decoratorCallGeneric.errors.txt
tests/cases/conformance/decorators/decoratorCallGeneric.ts(7,2): error TS2345: Argument of type 'typeof C' is not assignable to parameter of type 'I<C>'.
  Types of property 'm' are incompatible.
    Type '() => void' is not assignable to type '() => C'.
      Type 'void' is not assignable to type 'C'.


==== tests/cases/conformance/decorators/decoratorCallGeneric.ts (1 errors) ====
    interface I<T> {
        prototype: T,
        m: () => T
    }
    function dec<T>(c: I<T>) { }
    
    @dec
     ~~~
!!! error TS2345: Argument of type 'typeof {|C|0|}' is not assignable to parameter of type '{|I|1|}<{|C|2|}>'.
!!! error TS2345:   Types of property 'm' are incompatible.
!!! error TS2345:     Type '() => void' is not assignable to type '() => {|C|3|}'.
!!! error TS2345:       Type 'void' is not assignable to type '{|C|4|}'.
!!! annotated symbol 0 tests/cases/conformance/decorators/decoratorCallGeneric.ts:8:7
!!! annotated symbol 1 tests/cases/conformance/decorators/decoratorCallGeneric.ts:1:11
!!! annotated symbol 2 tests/cases/conformance/decorators/decoratorCallGeneric.ts:8:7
!!! annotated symbol 3 tests/cases/conformance/decorators/decoratorCallGeneric.ts:8:7
!!! annotated symbol 4 tests/cases/conformance/decorators/decoratorCallGeneric.ts:8:7
    class C {
        _brand: any;
        static m() {}
    }
    